--- a/css/style.css
+++ b/css/style.css
@@ -2,31 +2,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Open Sans";
 }
 
 .container {
-  margin: 3rem auto;
+  margin: 2rem auto;
+  border: 3px solid #0C2C45;
   max-width: 600px;
-  box-shadow: 0 0 15px rgba(0, 128, 128, 0.6);
+  box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.6);
   /* border-radius: 5px; */
   overflow: hidden;
 }
 
 header {
-  background-color: teal;
-  padding: 1.5rem;
+  background-color: #0C2C45;
+  padding: 1rem;
   text-align: center;
 }
 
 header h1 {
-  padding: 1.5rem;
+  padding: 0 0 0.5rem 0;
   font-size: 3rem;
   color: white;
   text-transform: uppercase;
 }
 
 header .input-wrapper {
-  margin: 0;
+  margin: 0 0 1rem 0;
   padding: 0;
   border-radius: 5px;
   overflow: hidden;
@@ -36,11 +38,13 @@ header .input-wrapper {
 header input {
   width: 90%;
   display: block;
-  padding: 1rem;
+  padding: 0.75rem 2rem;
   border: none;
   outline: none;
   background: rgba(255, 255, 255, 0.6);
   transition: background 0.2s;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
 }
 
 header input:hover,
@@ -52,21 +56,16 @@ header button {
   width: 5rem;
   outline: none;
   border: none;
-  margin-left: -0.25rem;
   padding: 1rem;
-  background: #0C2C45;
-  opacity: 0.8;
+  background: teal;
+  opacity: 0.6;
   color: white;
   cursor: pointer;
-  transition: background 0.2s;
+  transition: opacity 0.2s;
 }
 
 header button:hover {
-  background: #F2A200;
-}
-
-main {
-
+  opacity: 1;
 }
 
 main .status {
@@ -74,6 +73,8 @@ main .status {
   text-align: center;
   font-size: 2rem;
   background-color: #ececec;
+  color: #0C2C45;
+  opacity: 0.7;
   display: none;
 }
 
@@ -84,7 +85,8 @@ ul {
 main li {
   display: flex;
   justify-content: space-between;
-  padding: 1rem;
+  align-items: center;
+  padding: 0.5rem;
 }
 
 main li:nth-child(2n + 1) {
@@ -95,11 +97,22 @@ main li:nth-child(2n) {
   background-color: #ececec;
 }
 
+main li p {
+  font-size: 1.1rem;
+  margin-left: 1rem;
+  color: #0C2C45;
+}
+
+main li .buttons {
+  display: flex;
+}
+
 main li button {
   width: 2.25rem;
   outline: none;
   border: none;
   border-radius: 5px;
+  margin: 0.1rem;
   padding: .6rem;
   cursor: pointer;
   opacity: 0.8;
