--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 .container {
   margin: 2rem auto;
   border: 3px solid #0C2C45;
-  max-width: 600px;
+  width: 60%;
+  min-width: 450px;
   box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.6);
   /* border-radius: 5px; */
   overflow: hidden;
@@ -115,12 +116,13 @@ main li button {
   margin: 0.1rem;
   padding: .6rem;
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.7;
   transition: opacity 0.3s;
 }
 
 main li button:hover {
   opacity: 1;
+  box-shadow: 0.2rem 0.2rem 0.4rem #333;
 }
 
 main li .btn-todo-up {
