--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,10 @@
 }
 
 .container {
-  margin: 2rem auto;
+  margin: 1rem auto;
   border: 3px solid #0C2C45;
   width: 60%;
-  min-width: 450px;
+  min-width: 600px;
   box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.6);
   /* border-radius: 5px; */
   overflow: hidden;
@@ -22,10 +22,16 @@ header {
 }
 
 header h1 {
-  padding: 0 0 0.5rem 0;
+  /* padding: 0 0 0.5rem 0; */
   font-size: 3rem;
-  color: white;
+  color: #ddd;
   text-transform: uppercase;
+}
+
+header h2 {
+  font-size: 1.5rem;
+  color: #aaa;
+  margin-bottom: 0.75rem;
 }
 
 header .input-wrapper {
@@ -75,7 +81,7 @@ main .status {
   font-size: 2rem;
   background-color: #ececec;
   color: #0C2C45;
-  opacity: 0.7;
+  opacity: 0.5;
   display: none;
 }
 
@@ -114,15 +120,15 @@ main li button {
   border: none;
   border-radius: 5px;
   margin: 0.1rem;
-  padding: .6rem;
+  padding: .5rem;
   cursor: pointer;
   opacity: 0.7;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s, box-shadow 0.2s;
 }
 
 main li button:hover {
   opacity: 1;
-  box-shadow: 0.2rem 0.2rem 0.4rem #333;
+  box-shadow: 0.2rem 0.2rem 0.4rem #333, 0 0 1rem #333;
 }
 
 main li .btn-todo-up {
