--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ header input:focus {
 }
 
 header button {
-  width: 5rem;
+  width: 10%;
+  min-width: 5rem;
   outline: none;
   border: none;
   padding: 1rem;
